--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "library",
     "starter"
   ],
-  "author": "Kevin Kreuzer",
+  "author": "busry",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/Busry/test-icons/issues"
